--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "file",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -14,6 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "json": "^11.0.0"
+    "joi": "^17.13.3",
+    "json": "^11.0.0",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.22"
   }
 }
