--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +20,8 @@
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.22"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
