integrted swagger[annotation approach] and added authintication flow

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "start": "nodemon index.js",
-    "debug":"nodemon --inspect-brk index.js",
+    "debug": "nodemon --inspect-brk index.js",
     "eslint": "npx eslint ."
   },
   "keywords": [],
@@ -24,6 +24,8 @@
     "mssql": "^11.0.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.2.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
